refactored: Customer's module
