# src/swagger.json
@@ -147,7 +147,9 @@
               "application/json": {
                 "schema": {
                   "type": "array",
-                  "$ref": "#/components/schemas/ArrayOfMerchants"
+                  "items": {
+                    "$ref": "#/components/schemas/Merchant"
+                  }
                 }
               }
             }
@@ -248,26 +250,26 @@
         "tags": ["Customer"],
         "summary": "Gets one customer",
         "description": "This route returns one customer",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "customer_id": {
-                    "type": "string"
-                  },
-                  "email": {
-                    "type": "string"
-                  }
-                },
-                "example": {
-                  "email": "thomas.anderson@matrix.com"
-                }
-              }
+        "parameters": [
+          {
+            "in": "query",
+            "name": "customerId",
+            "description": "Customer's identification key. Mandatory if a e-mail is not provided",
+            "schema": {
+              "type": "string",
+              "example": "02366951-e631-4299-93fd-35629a1056e6"
+            }
+          },
+          {
+            "in": "query",
+            "name": "email",
+            "description": "Customer's email. Mandatory if an id is not provided",
+            "schema": {
+              "type": "string",
+              "example": "thomas.anderson@matrix.com"
             }
           }
-        },
+        ],
         "responses": {
           "200": {
             "description": "OK",
@@ -275,6 +277,26 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/Customer"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string",
+                      "example": "error"
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "A customerId or email must be provided!"
+                    }
+                  }
                 }
               }
             }
@@ -295,7 +317,9 @@
               "application/json": {
                 "schema": {
                   "type": "array",
-                  "$ref": "#/components/schemas/ArrayOfCustomers"
+                  "items": {
+                    "$ref": "#/components/schemas/Customer"
+                  }
                 }
               }
             }
@@ -484,7 +508,10 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ArrayOfOrders"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Order"
+                  }
                 }
               }
             }
@@ -552,7 +579,10 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ArrayOfPayables"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Payable"
+                  }
                 }
               }
             }
@@ -704,13 +734,6 @@
           }
         }
       },
-      "ArrayOfMerchants": {
-        "type": "array",
-        "items": {
-          "type": "object",
-          "$ref":"#/components/schemas/Merchant"
-        }
-      },
       "Customer": {
         "type": "object",
         "required": ["name", "email"],
@@ -740,13 +763,6 @@
             "example": "2021-10-31T12:24:35.363Z",
             "format": "date-time"
           }
-        }
-      },
-      "ArrayOfCustomers": {
-        "type": "array",
-        "items": {
-          "type": "object",
-          "$ref":"#/components/schemas/Customer"
         }
       },
       "Order": {
@@ -811,13 +827,6 @@
           }
         }
       },
-      "ArrayOfOrders": {
-        "type": "array",
-        "items": {
-          "type": "object",
-          "$ref":"#/components/schemas/Order"
-        }
-      },
       "Payable": {
         "type": "object",
         "properties": {
@@ -863,13 +872,6 @@
             "type": "object",
             "$ref": "#/components/schemas/Merchant"
           }
-        }
-      },
-      "ArrayOfPayables": {
-        "type": "array",
-        "items": {
-          "type": "object",
-          "$ref":"#/components/schemas/Payable"
         }
       }
     }
